[package]
name = "md407"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
crossterm = "0.19.0"
indicatif = "0.16.2"
libc = "0.2.94"
pico-args = "0.4.1"
rustyline = "8.0.0"
serialport = "4.0.1"
skim = "0.9.4"
termios = "0.3.3"
